# 3DlineRTtorch

./: README.md  pyproject.toml
src/lineRTtorch/automap/: automap.py
src/lineRTtorch/data_structures/: torch_struct.py  torch_vector.py
src/lineRTtorch/geometry/: cube_geometry.py
tests/: test_accuracy_cumsum.py  test_backpack.py  test_cube_geometry.py  test_forward_gradient.py  test_gradient_of_loop.py  test_old_for_loops.py  test_raytracing.py  timing_cumsum_scatter_add.py  timing_logprobnorm_minexp2.py  timing_map_freq_idx.py  timing_rand_int_indexing.py
