[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lineRTtorch"
version = "0.0.1"
authors = [
  { name="Thomas Ceulemans", email="thomas.ceulemans@kuleuven.be" },
]
description = "A simple GPU implement for line radiative transfer"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]